--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ img {
  style="width:90%"><br>&nbsp;</br><button class="button">Live Rate Of
  Vegetables</button></a></br></br>
 &nbsp;<img src="https://images.moneycontrol.com/static-mcnews/2021/07/Food-grains.jpg?impolicy=website&width=770&height=431" style="width:90%"><a href="https://tradingeconomics.com/commodity/wheat#:~:text=Wheat%20is%20expected%20to%20trade,552.75%20in%2012%20months%20time"><br>&nbsp;</br><button class="button button2">Live Rate Of grains</button></a></br></br>
-&nbsp;<img src="https://domf5oio6qrcr.cloudfront.net/medialibrary/11499/3b360279-8b43-40f3-9b11-604749128187.jpg" style="width:90%"><br>&nbsp;</br><button class="button button3">Live Rate Of Fruits</button></br></a></br></br>
+&nbsp;<img src="https://domf5oio6qrcr.cloudfront.net/medialibrary/11499/3b360279-8b43-40f3-9b11-604749128187.jpg" style="width:90%"><a href="https://www.oneindia.com/fruits-price.html"><br>&nbsp;</br><button class="button button3">Live Rate Of Fruits</button></br></a></br></br>
  &nbsp;<img
  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSljOAALgIwfQyYyoFAj_bIlB9OeUVYv5P__w&usqp=CAU"><a
  href="https://www.bookmycrop.com/advance-search-live?my_location=&search_keyword=&search_view=listing&total_distance=500&is_organic=&is_orignal_image=&product_master_type_id=&date_order=&weight_order=&price_order=&created_at=desc&current_address_latitude=&current_address_longitude=&city_id=&tehsil_id=&category_list="
