--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ img {
             <a href="http://agripb.gov.in/">Chandigarh</a>
             <a href="http://lakagri.nic.in/">Lakshadweep</a>
 </div></li>
-  <li class="abc"><a href="https://login-gamma-azure.vercel.app/">Logout <i class="fa-solid fa-right-from-bracket"></i></a></li>
+  <li class="abc"><a href="https://umaradnaan123.github.io/login/">Logout <i class="fa-solid fa-right-from-bracket"></i></a></li>
 </ul></br>
     <div class="slideshow-container">
 <div class="mySlides fade">
